--- a/domaci2/requirements.txt
+++ b/domaci2/requirements.txt
@@ -105,6 +105,7 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.6.3
+tabulate==0.9.0
 terminado==0.17.1
 tinycss2==1.2.1
 tornado==6.3.3
