--- a/homework4/julia/Cartpole/Project.toml
+++ b/homework4/julia/Cartpole/Project.toml
@@ -1,4 +1,7 @@
 name = "Cartpole"
-uuid = "065cc8bb-5b5a-497c-b640-4f2869610709"
+uuid = "567b6cbd-babb-4d40-a62b-58032c9f6dd1"
 authors = ["Nenad <radovic.nenad158@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
