--- a/homework4/julia/Cartpole/Project.toml
+++ b/homework4/julia/Cartpole/Project.toml
@@ -5,3 +5,5 @@ version = "0.1.0"
 
 [deps]
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
